# library

./: .gitignore  .pre-commit-config.yaml  README.md  aqua.yaml  flake.nix  index.md  library_for_joi.py  merge_file.bash  mise.toml  pre_commit.bash  pyproject.toml  test.py  test.py.md  test_libs.py
.competitive-verifier/docs/: _config.yml  index.md
.github/workflows/: codeql.yml  merge_file.yml  mergefile.yml  unittest.yml  verify.yml  work.yml  workflow.yml
code/: Makefile  main.cpp  main.cpp.md  main.py  main.py.md  template.json
docs/: math_func.md
libs/: __init__.py.md  alias.py  array_create.py  array_create.py.md  binary_search.py  binary_search.py.md  bit.py  bit.py.md  change_minmax.py  coordinate_compression.py  coordinate_compression.py.md  coordinates_to_id.py  dijkstra.py  dis.py  dis.py.md  dis_lib.py  dp.py  dp.py.md  dual_segtree.py  euler_tour.py  get_path.py  graph.py  graph.py.md  grid.py  grid.py.md  heap.py  imos_2d.py  import.py  import.py.md  lca_weight.py  manacher.py  math_func.py  math_func.py.md  matrix.py  memo.py  memo.py.md  mo.py  modint.py  modint.py.md  potential_unionfind.py  (+15 more)
nix/cpp-dump/: default.nix
python/: binary_search.py  grath.py  grid.py  standard_input.py  unionfind.py  utils.py
tests/: ABC151D.py  ABC151D.py.md  ABC287E.py  ABC287E.py.md  ABC298D.py  ABC298D.py.md  ABC304E.py  ABC304E.py.md  ABC353E.py  ABC353E.py.md  ABC365C.py  ABC365C.py.md  ABC392E.py  ABC392E.py.md  ABC398F.py  ABC408C.py  aoj0560.py  bit.py  dijkstra.py  dijkstra_getpath.py  eratosthenes.py  factorization_plural_new.py  factorization_plural_new.py.md  factorization_plural_old.py  factorization_plural_old.py.md  is_prime.py  knapsack_normal.py  manacher.py  potential_unionfind.py  tessoku_A06.py  tessoku_A06.py.md  unionfind.py
