[project]
name = "library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["debugpy>=1.8.14"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["C9", "E", "F", "W", "I"]
ignore = [
  "F401",
  "E402",
  "E741",
  "F405",
  "F403",
  "I001",
  "E722",
  "E501",
  "F811",
]
