[project]
name = "library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ac-library-python",
  "debugpy>=1.8.14",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E741", "ANN001", "S101", "D102", "D101", "D100", "PT018"]

